--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/opera?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=Gbhfvblf18
 
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=create-drop
