--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/opera?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/university?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Gbhfvblf18
 
