--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ cache:
     - $HOME/.m2
 before_install:
   - chmod +x mvnw
-  - mysql -e 'CREATE DATABASE payment_portal;'
+  - mysql -e 'CREATE DATABASE university;'
